--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,4 +26,5 @@ target_link_libraries(${PROJECT_NAME}
     ${Boost_LIBRARIES}
     pthread)
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config/livermore-broker.ini DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config/livermore-broker.ini DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
+     FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ WORLD_WRITE)
