--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -6,7 +6,7 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 service_scan_dur_ms=100
-service_array=quote
+service_array=broadcast,quote
 
 [quote]
 log_path=logs/quote/log.log
@@ -15,9 +15,17 @@ log_file_num=10
 log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
-ctp_ip=218.28.130.102
-ctp_port=41413
+ctp_ip=180.168.146.187
+ctp_port=10211
 ctp_flow_md_path=./flow_md/
 ctp_using_udp=false
 ctp_multicast=false
 ctp_instruments=IF1809,IF1808
+
+[broadcast]
+log_path=logs/broadcast/log.log
+log_file_size_mb=5
+log_file_num=10
+log_file_rotate_on_open=true
+log_min_lvl = 1
+crash_path=./
