--- a/src/service/broadcast/CMakeLists.txt
+++ b/src/service/broadcast/CMakeLists.txt
@@ -9,61 +9,44 @@ set(CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../deps/lib/cmake")
 set(COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../common)
 set(DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../deps)
 
-if (NOT MANAGE_SHARED_NAME)
-    set(MANAGE_SHARED_NAME ${PROJECT_NAME})
+if (NOT BROADCAST_SHARED_NAME)
+    set(BROADCAST_SHARED_NAME ${PROJECT_NAME})
 endif()
 
-if (NOT MANAGE_STATIC_NAME)
-    set(MANAGE_STATIC_NAME ${PROJECT_NAME}-static)
+if (NOT BROADCAST_STATIC_NAME)
+    set(BROADCAST_STATIC_NAME ${PROJECT_NAME}-static)
 endif()
-
-find_package(Boost COMPONENTS 
-    filesystem
-    coroutine
-    program_options)
 
 find_package(PkgConfig REQUIRED)
-find_package(spdlog REQUIRED)
-find_package(fmt REQUIRED)
 pkg_check_modules(BREAKPAD REQUIRED breakpad-client)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${COMMON_SOURCE_DIR})
-include_directories(${BREAKPAD_INCLUDE_DIRS})
 include_directories(${DEPS_DIR}/include)
+include_directories(${DEPS_DIR}/include/breakpad)
 
 link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
-link_directories(${CTP_LIBRARY_DIR})
-link_directories(${BREAKPAD_LIBRARY_DIRS})
 link_directories(${DEPS_DIR}/lib)
 
 aux_source_directory(./ SRC)
 aux_source_directory(${COMMON_SOURCE_DIR} COMM_SRC)
 
 if (BUILD_SHARED)
-    add_library(${MANAGE_SHARED_NAME} SHARED ${SRC}
-        ${COMMON_SOURCE_DIR}/application_base.cpp
-        ${COMMON_SOURCE_DIR}/config_mgr_base.cpp)
+    add_library(${BROADCAST_SHARED_NAME} SHARED ${SRC} ${COMM_SRC})
 
-    target_link_libraries(${MANAGE_SHARED_NAME} 
+    target_link_libraries(${BROADCAST_SHARED_NAME} 
         ${CMAKE_DL_LIBS}
-        ${Boost_LIBRARIES}
         breakpad_client
-        spdlog::spdlog
-        pthread
-        fmt::fmt)
+        pthread)
 endif()
 
 if (BUILD_STATIC)
-    add_library(${MANAGE_STATIC_NAME} STATIC ${SRC} ${COMM_SRC})
+    add_library(${BROADCAST_STATIC_NAME} STATIC ${SRC} ${COMM_SRC})
 
-    target_link_libraries(${MANAGE_STATIC_NAME} 
+    target_link_libraries(${BROADCAST_STATIC_NAME} 
         ${CMAKE_DL_LIBS}
-        ${Boost_LIBRARIES}
         breakpad_client
-        spdlog::spdlog
-        pthread
-        fmt::fmt)
+        pthread)
 endif()
 
 message("service ${PROJECT_NAME} build success")
