--- a/src/service/CMakeLists.txt
+++ b/src/service/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.19.2)
 
-# add_subdirectory(broadcast)
+add_subdirectory(broadcast)
 # add_subdirectory(database)
-add_subdirectory(manage)
-# add_subdirectory(quote)
+add_subdirectory(quote)
 # add_subdirectory(sentinel)
+
+add_subdirectory(manage)
