--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -15,12 +15,27 @@ log_file_num=10
 log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
-ctp_ip=180.168.146.187
-ctp_port=10211
+ctp_enable=false
+ctp_addrs=tcp://180.168.212.75:41313
 ctp_flow_md_path=./flow_md/
 ctp_using_udp=false
 ctp_multicast=false
 ctp_instruments=IF1809,IF1808
+xtp_enable=true
+xtp_addrs=tcp://180.168.212.75:41313
+xtp_username=""
+xtp_passwd=""
+xtp_using_udp=false
+xtp_auto_save=true
+xtp_client_id=0
+xtp_account_count=0
+xtp_account_key=""
+xtp_resume_type=0
+xtp_filepath=./
+xtp_ping_pong_test=true
+xtp_heatbeat_interval=1
+xtp_buf_size=4096
+xtp_sdk_log_lvl=4
 
 [broadcast]
 log_path=logs/broadcast/log.log
