add xtp sub api

--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -27,15 +27,16 @@ xtp_username=""
 xtp_passwd=""
 xtp_using_udp=false
 xtp_auto_save=true
-xtp_client_id=0
+xtp_client_id=1
 xtp_account_count=0
 xtp_account_key=""
 xtp_resume_type=0
 xtp_filepath=./
 xtp_ping_pong_test=true
 xtp_heatbeat_interval=1
-xtp_buf_size=4096
+xtp_buf_size_mb=4
 xtp_sdk_log_lvl=4
+xtp_instruments=SH:600090,SZ:600120
 
 [broadcast]
 log_path=logs/broadcast/log.log
