--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -109,7 +109,7 @@ if (UNIX)
     set(XTP_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src/xtp/bin)
     file(GLOB all_xtp_src "${XTP_ROOT}/include/*.h")
     file(GLOB all_xtp_dll "${XTP_ROOT}/linux_glibc_2.17/*.so")
-    set(XTP_CONF_CMD mkdir -p ${CMAKE_CURRENT_SOURCE_DIR}/include/xtp)
+    set(XTP_CONF_CMD mkdir -p ${CMAKE_CURRENT_SOURCE_DIR}/lib && mkdir -p ${CMAKE_CURRENT_SOURCE_DIR}/include/xtp)
     set(XTP_BUILD_CMD cp -p ${all_xtp_src} ${CMAKE_CURRENT_SOURCE_DIR}/include/xtp/)
     set(XTP_INSTALL_CMD cp -p ${all_xtp_dll} ${CMAKE_CURRENT_SOURCE_DIR}/lib/)
 else()
