--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -21,11 +21,12 @@ ctp_flow_md_path=./flow_md/
 ctp_using_udp=false
 ctp_multicast=false
 ctp_instruments=IF1809,IF1808
-xtp_enable=true
+xtp_enable=false
 xtp_addrs=119.3.103.38:6002
 xtp_username=""
 xtp_passwd=""
 xtp_using_udp=false
+xtp_local_ip="172.16.255.130"
 xtp_auto_save=true
 xtp_client_id=1
 xtp_account_count=0
@@ -37,6 +38,8 @@ xtp_heatbeat_interval=1
 xtp_buf_size_mb=4
 xtp_sdk_log_lvl=4
 xtp_instruments=SH:600090,SZ:600120
+tx_enable=true
+tx_instruments=sh600519,sz002030
 
 [broadcast]
 log_path=logs/broadcast/log.log
