add broadcast api

--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -6,7 +6,7 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 service_scan_dur_ms=100
-service_array=broadcast,quote
+service_array=quote,broadcast
 
 [quote]
 log_path=logs/quote/log.log
@@ -49,4 +49,5 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 tcp_ports=10086,10087
-bind_cpu_cores=0,1
+bind_cpu_cores=1,2
+msg_pool_size=1
