add service database

--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -1,4 +1,5 @@
 [manage]
+module=manage
 log_path=logs/manage/log.log
 log_file_size_mb=5
 log_file_num=10
@@ -6,10 +7,11 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 service_scan_dur_ms=100
-service_array=quote,broadcast
+service_array=database1
 
-[quote]
-log_path=logs/quote/log.log
+[quote1]
+module=quote
+log_path=logs/quote1/log.log
 log_file_size_mb=5
 log_file_num=10
 log_file_rotate_on_open=true
@@ -41,8 +43,9 @@ xtp_instruments=SH:600090,SZ:600120
 tx_enable=true
 tx_instruments=sh600519,sz002030
 
-[broadcast]
-log_path=logs/broadcast/log.log
+[broadcast1]
+module=broadcast
+log_path=logs/broadcast1/log.log
 log_file_size_mb=5
 log_file_num=10
 log_file_rotate_on_open=true
@@ -51,3 +54,12 @@ crash_path=./
 tcp_ports=10086,10087
 bind_cpu_cores=1,2
 msg_pool_size=1
+
+[database1]
+module=database
+log_path=logs/database1/log.log
+log_file_size_mb=5
+log_file_num=10
+log_file_rotate_on_open=true
+log_min_lvl = 1
+crash_path=./
