--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -7,7 +7,7 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 service_scan_dur_ms=100
-service_array=database1
+service_array=quote1
 
 [quote1]
 module=quote
