--- a/src/config/livermore-broker.ini
+++ b/src/config/livermore-broker.ini
@@ -7,7 +7,7 @@ log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
 service_scan_dur_ms=100
-service_array=quote1
+service_array=quote1,broadcast1
 
 [quote1]
 module=quote
@@ -51,7 +51,7 @@ log_file_num=10
 log_file_rotate_on_open=true
 log_min_lvl = 1
 crash_path=./
-tcp_ports=10086,10087
+tcp_ports=10086
 bind_cpu_cores=1,2
 msg_pool_size=1
 
